# hum_me_a_melody

./: README.md  hum_me_a_melody_gradio_final.ipynb  hum_me_a_melody_test.ipynb  pyproject.toml
src/: app.py  astrology.py  moods.py  music_generation.py  video_generation.py  video_genetation.py
